tests/cases/should_fail/literals/dangling_parenthesis.hash
// run=fail, stage=parse

k := (a) + ((b)));
