tests/cases/should_fail/literals/dangling_parenthesis.stderr
error: unexpectedly reached the end of input
 --> $DIR/dangling_parenthesis.hash:1:17
1 |   k := (a) + ((b)));
  |                   ^ here
  = help: consider adding a `;`
